<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_pattern"
    tools:context=".AddItemActivity">

    <androidx.appcompat.widget.Toolbar
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/id_bar_add_item"
        android:elevation="8dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"/>

    <LinearLayout
        android:background="@color/blue"
        android:padding="16dp"
        android:elevation="4dp"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="68dp">

        <EditText
            android:id="@+id/name_text"
            android:background="@null"
            android:hint="@string/title_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:maxLines="1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"/>

        <EditText
            android:id="@+id/price_text"
            android:background="@null"
            android:hint="@string/price_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="number"
            android:gravity="end"
            android:padding="4dp"
            android:maxLines="1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"/>

        <TextView
            android:text="@string/rub"
            android:textColor="@color/white"
            android:layout_width="25dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/add_button"
            android:background="@drawable/ic_add"
            android:layout_marginStart="22dp"
            android:layout_width="26dp"
            android:layout_height="26dp"/>


    </LinearLayout>



</LinearLayout>