<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_pattern"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/balance_total_color"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_balance"
        android:textColor="@color/balance_secondary_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/total"
        app:layout_constraintStart_toStartOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/total" />

    <TextView
        android:id="@+id/expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/balance_expense_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/id_guide"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_title" />

    <TextView
        android:id="@+id/expense_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_title"
        android:textColor="@color/balance_secondary_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/expense"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/expense"
        app:layout_constraintTop_toBottomOf="@+id/expense"
       />

    <TextView
        android:id="@+id/incomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:textColor="@color/balance_income_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/id_guide"
        app:layout_constraintTop_toBottomOf="@+id/total_title" />

    <TextView
        android:id="@+id/income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_title"
        android:textColor="@color/balance_secondary_text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/incomes"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="@+id/incomes"
        app:layout_constraintTop_toBottomOf="@+id/incomes"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/id_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.example.balance.DiagramView
        android:id="@+id/diagram"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="?android:attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_title" />



</androidx.constraintlayout.widget.ConstraintLayout>